<resources>
    <string name="app_name">Link Restaurant</string>
    <string name="sign_in">SIGN IN</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Link Restaurant</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="user_information">User Information</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="update">UPDATE</string>
    <string name="sign_out">Sign Out</string>
    <string name="nearby_restaurant">Nearby Restaurant</string>
    <string name="order_history">Order History</string>
    <string name="update_information">Update Information</string>
    <string name="our_restaurant">LINK RESTAURANT</string>
    <string name="restaurant_a">Restaurant A</string>
    <string name="kasoa_ofaakor_queen_city_h_no_qc_212_12b">Kasoa Ofaakor Queen City H/no. QC 212/12B</string>
    <string name="by_mood_or_preference">By Mood or Preference</string>
    <string name="cart">Cart</string>
    <string name="image_for_category">Image for category</string>
    <string name="menu_details">Menu Details</string>
    <string name="pastries">PASTERIES</string>
    <string name="food_image">Food Image</string>
    <string name="fufu_and_palm_nut_soup">Fufu and Palm nut Soup</string>
    <string name="gh_180">GH₵ 180</string>
    <string name="food_image_details">Food image details</string>
    <string name="money_sign">GH₵</string>
    <string name="our_specials">Our Specials</string>
    <string name="food_detail">food detail</string>
    <string name="money_text">200.00</string>
    <string name="size">Size</string>
    <string name="add_on">Add On</string>
    <string name="header_indicator">header indicator</string>
    <string name="description">Description</string>
    <string name="view_cart">VIEW CART</string>
    <string name="sauce_1">Sauce 1</string>
    <string name="search">Search</string>
    <string name="favorite">Favorites</string>
    <string name="phone_number">+233273637961</string>
    <string name="date">Date</string>
    <string name="select_date">Select Date</string>
    <string name="add_new_address">Add new address</string>
    <string name="payment">Payment</string>
    <string name="cash_on_deliver">Cash On Deliver</string>
    <string name="online_payment">Online Payment</string>
    <string name="proceed">Proceed</string>
    <string name="place_order">Place Order</string>
    <string name="total_cost">Total Cost</string>
    <string name="zero">0</string>
    <string name="order">ORDER</string>
    <string name="empty_cart">Empty Cart</string>
    <string name="_1">1</string>
    <string name="extra_price">Extra Price (GHC): 180</string>
    <string name="your_order">Your Order</string>
    <string name="orderNumber">Order #1234</string>
    <string name="orderStatus">Processing</string>
    <string name="order_on">Order on</string>
    <string name="orderDate">05/14/2021</string>
    <string name="num_of_item_2">Num of Item 2</string>
    <string name="title_activity_nearby_reataurant">NearbyReataurant</string>
    <string name="discount_percent">(-10%)</string>
    <string name="discount">Discount</string>
    <string name="enter_or_scan_your_code">Enter or Scan your code</string>
    <string name="scan">Scan</string>
    <string name="apply">Apply</string>
    <string name="title_activity_link_restaurant_main">LinkRestaurantMain</string>
    <string name="title_activity_link_main2">LinkMainActivity2</string>

</resources>