<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlaceOrderActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/Theme.LinkRestaurant.AppBarOverlay">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/button_color"
                    app:popupTheme="@style/Theme.LinkRestaurant.PopupOverlay"
                    app:titleTextColor="@android:color/white"/>

            </com.google.android.material.appbar.AppBarLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/ic_baseline_attach_money_24"/>

                        <TextView
                            android:id="@+id/txt_total_cash"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginStart="8dp"
                            android:textSize="18sp"
                            android:layout_weight="6"
                            android:text="@string/money_text"/>

                        <TextView
                            android:id="@+id/txt_discount_cash"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginStart="8dp"
                            android:textSize="18sp"
                            android:layout_weight="2"
                            android:visibility="gone"
                            android:text="@string/discount_percent"/>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dip"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@android:color/darker_gray"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/ic_baseline_phone_24"/>

                        <TextView
                            android:id="@+id/txt_user_phone"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginStart="8dp"
                            android:layout_weight="8"
                            android:text="@string/phone_number"
                            android:textSize="18sp"/>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dip"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@android:color/darker_gray"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/ic_baseline_date_range_24"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginStart="8dp"
                            android:layout_weight="2"
                            android:text="@string/date"
                            android:textSize="18sp"/>

                        <EditText
                            android:id="@+id/edt_date"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="7"
                            android:hint="@string/select_date"
                            android:inputType="none"/>


                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/magnifika"
                android:padding="8dp"
                android:text="@string/address"
                android:textSize="24sp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txt_user_address"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:layout_marginStart="8dp"
                            android:layout_weight="9"
                            android:text="@string/kasoa_ofaakor_queen_city_h_no_qc_212_12b"
                            android:textSize="18sp"/>

                        <CheckBox
                            android:id="@+id/ckb_default_address"
                            android:checked="true"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"/>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dip"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@android:color/darker_gray"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txt_new_address"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginStart="8dp"
                            android:layout_weight="7"
                            android:text=""
                            android:textSize="18sp"/>

                        <Button
                            android:id="@+id/btn_add_new_address"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:background="@color/button_color"
                            android:text="@string/add_new_address"
                            android:textColor="@android:color/white"
                            android:textSize="12sp"/>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dip"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@android:color/darker_gray"/>



                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/magnifika"
                android:padding="8dp"
                android:text="@string/discount"
                android:textSize="24sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edt_discount_code"
                        android:hint="@string/enter_or_scan_your_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_weight="2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Button
                            android:id="@+id/btn_scan_qr"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_margin="8dp"
                            android:background="@drawable/apply_button"
                            android:fontFamily="@font/magnifika"
                            android:text="@string/scan"
                            android:padding="8dp"
                            android:drawableStart="@drawable/ic_baseline_camera_alt_24"
                            android:textColor="@android:color/white"/>

                        <Button
                            android:id="@+id/btn_apply"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_margin="8dp"
                            android:background="@drawable/apply_button"
                            android:fontFamily="@font/magnifika"
                            android:padding="8dp"
                            android:enabled="false"
                            android:drawableStart="@drawable/ic_baseline_check_24"
                            android:text="@string/apply"
                            android:textColor="@android:color/white"/>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/magnifika"
                android:padding="8dp"
                android:text="@string/payment"
                android:textSize="24sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <RadioButton
                        android:checked="true"
                        android:id="@+id/rdi_cod"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cash_on_deliver"/>

                    <RadioButton
                        android:checked="true"
                        android:id="@+id/rdi_online_payment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/online_payment"/>

                </RadioGroup>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btn_proceed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/border_button"
                android:fontFamily="@font/magnifika"
                android:text="@string/proceed"
                android:textColor="@android:color/white"/>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>