<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_food_specials"
            android:contentDescription="@string/food_image"
            android:scaleType="centerCrop"
            android:src="@drawable/app_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_gravity="center_vertical"
            android:layout_weight=" 9">

            <TextView
                android:id="@+id/txt_food_name_specials"
                android:text="@string/fufu_and_palm_nut_soup"
                android:fontFamily="@font/magnifika"
                android:textColor="@color/button_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/txt_food_price_specials"
                android:text="@string/gh_180"
                android:textSize="14sp"
                android:textStyle="italic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/img_detail_specials"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_outline_info_24"
                 android:contentDescription="@string/food_image_details"
                android:layout_marginBottom="10dp"/>

            <ImageView
                android:id="@+id/img_fav_specials"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_favorite_border_primary_color_24"
                android:contentDescription="@string/food_image_details"
                android:layout_marginBottom="10dp"/>

            <ImageView
                android:id="@+id/img_cart_specials"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_shopping_cart_botton_color_24"
                android:contentDescription="@string/food_image_details"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>